--- a/config.yaml
+++ b/config.yaml
@@ -38,6 +38,36 @@ eval:
   top_k: 10
   run_cpe: true  # Counterfactual Policy Evaluation
 
+# Trajectory generation settings
+trajectory:
+  max_frames: 50
+  dt: 0.1  # Time step between frames (seconds)
+  
+  # LSTM Generator
+  lstm:
+    hidden_size: 256
+    num_layers: 2
+    dropout: 0.1
+    context_embed_dim: 64
+    learning_rate: 0.001
+    
+  # Transformer Generator  
+  transformer:
+    d_model: 256
+    nhead: 8
+    num_layers: 4
+    dim_feedforward: 512
+    dropout: 0.1
+    learning_rate: 0.0001
+    warmup_steps: 500
+
+# Training settings
+training:
+  batch_size: 32
+  epochs: 50
+  patience: 10
+  weight_decay: 0.00001
+
 # Output
 output:
   artifacts_dir: "artifacts"
